# docker-lens

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docker_lens/: __init__.py  cli.py  demo.py  docker_client.py  models.py  utils.py
docker_lens/analyzers/: __init__.py  comparison.py  dockerfile.py  efficiency.py  image.py  security.py
docker_lens/output/: __init__.py  console.py  html_report.py  reports.py
tests/: conftest.py  test_cli.py  test_comparison.py  test_console.py  test_demo.py  test_dockerfile_linter.py  test_efficiency.py  test_html_report.py  test_models.py  test_reports.py  test_security.py  test_utils.py
