[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docker-lens"
version = "1.0.0"
description = "Docker Image Analyzer & Optimizer — lint Dockerfiles, analyze images, scan vulnerabilities, optimize size"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sanjay S", email = "sanjaysundarmurthy@gmail.com" },
]
keywords = [
    "docker", "dockerfile", "lint", "analyzer", "security",
    "optimization", "container", "devops", "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "docker>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
docker-lens = "docker_lens.cli:cli"

[project.urls]
Homepage = "https://github.com/SanjaySundarMurthy/docker-lens"
Repository = "https://github.com/SanjaySundarMurthy/docker-lens"
Issues = "https://github.com/SanjaySundarMurthy/docker-lens/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"docker_lens/analyzers/dockerfile.py" = ["E501"]
"docker_lens/output/console.py" = ["E501"]
"docker_lens/demo.py" = ["E501"]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
